// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorsViews ErrorsStatusbar displays error 1`] = `
<div>
  <div
    class="Ellipsis-jiq0k6-0 hkAFf"
  >
    <span
      class="styled__ErrorText-sc-1urwgm2-20 jLZgoF"
      title="Test.Error: Test error description"
    >
      <i
        class="IconContainer__I-sc-17phkpj-0 exSTku fa fa-exclamation-triangle"
      />
       
      Test.Error: Test error description
    </span>
  </div>
</div>
`;

exports[`ErrorsViews ErrorsStatusbar displays nothing if no error 1`] = `<div />`;

exports[`ErrorsViews ErrorsView displays nothing if no errors 1`] = `<div />`;

exports[`ErrorsViews ErrorsView displays procedure link if unknown procedure 1`] = `
<div>
  <div
    class="styled__StyledHelpFrame-sc-1urwgm2-4 ftFmVl"
  >
    <div
      class="styled__StyledHelpContent-sc-1urwgm2-5 fyfXoD"
    >
      <div
        class="styled__StyledHelpDescription-sc-1urwgm2-6 iIqLCg"
      >
        <div
          class="styled__StyledCypherMessage-sc-1urwgm2-10 styled__StyledCypherErrorMessage-sc-1urwgm2-12 fMBJsP"
        >
          ERROR
        </div>
        <h4
          class="styled__StyledErrorH4-sc-1urwgm2-17 hpjVTH"
        >
          Neo.ClientError.Procedure.ProcedureNotFound
        </h4>
      </div>
      <div
        class="styled__StyledDiv-sc-1urwgm2-7 bKVemz"
      >
        <pre
          class="styled__StyledPreformattedArea-sc-1urwgm2-19 kSFoGX"
        >
          not found
        </pre>
      </div>
      <div
        class="styled__StyledLinkContainer-sc-1urwgm2-9 irHglT"
      >
        <a
          class="styled__StyledLink-sc-1urwgm2-8 gjRGcw"
        >
          <i
            class="IconContainer__I-sc-17phkpj-0 gAFsVr fa fa-play-circle-o"
          />
           List available procedures
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`ErrorsViews ErrorsView does displays an error 1`] = `
<div>
  <div
    class="styled__StyledHelpFrame-sc-1urwgm2-4 ftFmVl"
  >
    <div
      class="styled__StyledHelpContent-sc-1urwgm2-5 fyfXoD"
    >
      <div
        class="styled__StyledHelpDescription-sc-1urwgm2-6 iIqLCg"
      >
        <div
          class="styled__StyledCypherMessage-sc-1urwgm2-10 styled__StyledCypherErrorMessage-sc-1urwgm2-12 fMBJsP"
        >
          ERROR
        </div>
        <h4
          class="styled__StyledErrorH4-sc-1urwgm2-17 hpjVTH"
        >
          Test.Error
        </h4>
      </div>
      <div
        class="styled__StyledDiv-sc-1urwgm2-7 bKVemz"
      >
        <pre
          class="styled__StyledPreformattedArea-sc-1urwgm2-19 kSFoGX"
        >
          Test error description
        </pre>
      </div>
    </div>
  </div>
</div>
`;
